sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: '<-' expected but '=' found.
	for(i = 1 to i < getNombreValeurs() by 1) {
              ^AlgInsertionSort:15: error: illegal start of simple expression
}
^